@@ -1,2 +1,3 @@
 tox
 flake8
+mypy
